tests/e2e/fail/v9_fail_slice_oob_message.ep
# EXIT: 1
# STDOUT_CONTAINS: runtime panic: slice index out of bounds
fun main(): void {
    let xs = new i64[] { 1 }
    let x = xs[1]
    println(str(x))
}
